Added a privacy remark.

--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
           <li><em>Check</em> the <strong>guest commenting</strong> so your customers don't neet to register for a Disqus account in order to comment on your mockups </li>
           <li>Make sure <strong>media attachments</strong> are <em>enabled</em> </li>
         </ul>
+        <p>Than make sure that your profile has the “Keep my profile activity private” option checked, so that your profile doesn't leek out potentially confidential information about the project.</p>
+        <p>We also think it's a good practice to create a completely separate Disqus account for this purpose.</p>
         <h3>The Code</h3>
         <p>Getting the comments into your mockup pages is really easy. We are going to assume that you are using this for an HTML mockup/template, but if you'd like to use it for image-based mockups all you need to do is create a web page containing your mockup as an image, than embed the code into that page. </p>
         <p>There are two ways you can do this:</p>
